--- a/angular.json
+++ b/angular.json
@@ -45,8 +45,9 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.scss"
+            "styles": [         
+            	"node_modules/bootstrap/dist/css/bootstrap.min.css",              
+            	"src/styles.scss"            
             ],
             "scripts": [],
             "es5BrowserSupport": true
